--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!--FIN NAVBAR-->
 
     <main class="bg-black text-white">
-        
+
         <!--INICIO SECCION CARRUSEL-->
         <section>
             <div id="carouselExample" class="carousel slide">
@@ -97,6 +97,42 @@
         </section>
         <!--FIN SECCION CARRUSEL-->
 
+        <!--INICIO SECCION QUIENES SOMOS-->
+        <section class="container p-3 d-none d-md-block">
+            <h2 class="text-center">¿QUIÉNES SOMOS?</h2>
+            <hr>
+            <div class="" id="quien-somos">
+                <div class="row">
+                    <div class="col">
+                        <div class="bg-info text-center">
+                            <i class="fa-solid fa-plane"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos et perspiciatis
+                            praesentium suscipit necessitatibus quas nemo ducimus iusto, natus, ipsa repudiandae vel.
+                            Quae
+                            numquam, eos quasi deserunt quo delectus!</p>
+                    </div>
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ratione explicabo.
+                            Exercitationem quibusdam explicabo maxime, a ut corporis cumque dignissimos accusantium
+                            accusamus aliquid ab eum ipsam dolore dolorem placeat nam.</p>
+                        <div class="bg-info text-center">
+                            <i class="fa-solid fa-mountain"></i>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="bg-info text-center">
+                            <i class="fa-solid fa-route"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, ea! Itaque blanditiis eum
+                            voluptas autem vero accusantium in, vel suscipit dolorem recusandae ab omnis libero
+                            asperiores
+                            fuga tempora at deserunt.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--FIN SECCION QUIENES SOMOS-->
     </main>
 </body>
 
