--- a/index.html
+++ b/index.html
@@ -133,6 +133,68 @@
             </div>
         </section>
         <!--FIN SECCION QUIENES SOMOS-->
+
+        <!--INICIO SECCION DESTACADOS-->
+        <section class="container p-3" id="destacados">
+            <h2 class="text-center">DESTACADOS</h2>
+            <hr>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card mx-auto text-bg-info text-white" style="width: 100%;">
+                        <img src="./assets/img/card1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem imsum dolor</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam mollitia
+                                obcaecati
+                                adipisci repellendus nam minus illum deserunt sed neque nulla tempore, velit quidem eum
+                                libero!
+                                Reprehenderit deleniti suscipit minus amet?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card mx-auto text-bg-info text-white" style="width: 100%;">
+                        <img src="./assets/img/card2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem imsum dolor</h5>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam dolorem
+                                ab
+                                harum
+                                molestias? Voluptate eaque, autem numquam cupiditate praesentium atque soluta
+                                consequatur.
+                                Provident id quo placeat impedit enim modi reiciendis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card mx-auto text-bg-info text-white" style="width: 100%;">
+                        <img src="./assets/img/card3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem imsum dolor</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+                                mollitia
+                                quas, ratione necessitatibus repellendus labore veniam, ad sed dolorem soluta autem
+                                fuga.
+                                Voluptatum, ducimus quia consectetur facilis similique libero.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 my-3">
+                    <div class="card mx-auto text-bg-info text-white" style="width: 100%;">
+                        <img src="./assets/img/card4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lorem imsum dolor</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus
+                                ipsam
+                                commodi sapiente placeat quam quibusdam architecto ea, magni totam inventore aliquid
+                                porro
+                                reprehenderit cumque aperiam natus ducimus aspernatur voluptates.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--FIN SECCION DESTACADOS-->
     </main>
 </body>
 
