--- a/index.html
+++ b/index.html
@@ -195,6 +195,32 @@
             </div>
         </section>
         <!--FIN SECCION DESTACADOS-->
+
+        <!--INICIO SECCION CONTACTO FORMULARIO-->
+        <section class="mx-auto py-3 container" id="contacto">
+            <h2 class="text-center">CONTACTO</h2>
+            <hr>
+            <form class="m-auto">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Su nombre aquí">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="Asunto del mensaje">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba su mensaje"
+                        rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info text-white">
+                    Enviar
+                </button>
+            </form>
+        </section>
+        <!--FIN SECCION CONTACTO FORMULARIO-->
     </main>
 </body>
 
