--- a/index.html
+++ b/index.html
@@ -221,6 +221,24 @@
             </form>
         </section>
         <!--FIN SECCION CONTACTO FORMULARIO-->
+
+        <!--INICIO SECCION FOOTER-->
+        <footer class="bg-info text-white">
+            <div class="row p-3 m-0">
+                <div class="col-6 text-center">
+                    <h1>VIAJES CHILE</h1>
+                </div>
+                <div class="col-6 px-20 text-center">
+                    <a href="https://github.com/" target="_blank"><i class="fa-brands fa-square-github fs-1"></i></a>
+                    <a href="https://cl.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fs-1"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank"><i
+                            class="fa-brands fa-square-x-twitter fs-1"></i></a>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i
+                            class="fa-brands fa-square-facebook fs-1"></i></a>
+                </div>
+            </div>
+        </footer>
+        <!--FIN SECCION FOOTER-->
     </main>
 </body>
 
