--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#quien-somos">Quienes somos</a>
+                        <a class="nav-link" href="#quienes-somos">Quienes somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#destacados">Destacados</a>
@@ -98,7 +98,7 @@
         <!--FIN SECCION CARRUSEL-->
 
         <!--INICIO SECCION QUIENES SOMOS-->
-        <section class="container p-3 d-none d-md-block">
+        <section class="container p-3 d-none d-md-block" id="quienes-somos">
             <h2 class="text-center">¿QUIÉNES SOMOS?</h2>
             <hr>
             <div class="" id="quien-somos">
@@ -215,31 +215,44 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba su mensaje"
                         rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-info text-white">
+                <button type="submit" class="btn btn-info text-white" 
+                data-bs-toggle="tooltip" data-bs-placement="right"
+                data-bs-custom-class="custom-tooltip"
+                data-bs-title="Enviar información">
                     Enviar
                 </button>
             </form>
         </section>
         <!--FIN SECCION CONTACTO FORMULARIO-->
-
-        <!--INICIO SECCION FOOTER-->
-        <footer class="bg-info text-white">
-            <div class="row p-3 m-0">
-                <div class="col-6 text-center">
-                    <h1>VIAJES CHILE</h1>
-                </div>
-                <div class="col-6 px-20 text-center">
-                    <a href="https://github.com/" target="_blank"><i class="fa-brands fa-square-github fs-1"></i></a>
-                    <a href="https://cl.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fs-1"></i></a>
-                    <a href="https://twitter.com/?lang=es" target="_blank"><i
-                            class="fa-brands fa-square-x-twitter fs-1"></i></a>
-                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i
-                            class="fa-brands fa-square-facebook fs-1"></i></a>
-                </div>
-            </div>
-        </footer>
-        <!--FIN SECCION FOOTER-->
     </main>
+
+    <!--INICIO SECCION FOOTER-->
+    <footer class="bg-info text-white">
+        <div class="row p-3 m-0">
+            <div class="col-6 text-center">
+                <h1>VIAJES CHILE</h1>
+            </div>
+            <div class="col-6 px-20 text-center">
+                <a href="https://github.com/" target="_blank"><i class="fa-brands fa-square-github fs-1"
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="Ir a Github"
+                    ></i></a>
+                <a href="https://cl.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fs-1"
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="Ir a Linkedin"
+                    ></i></a>
+                <a href="https://twitter.com/?lang=es" target="_blank"><i class="fa-brands fa-square-x-twitter fs-1"
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="Ir a Twitter / X"
+                    ></i></a>
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="fa-brands fa-square-facebook fs-1"
+                    data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="Ir a Facebook"
+                    ></i></a>
+            </div>
+        </div>
+    </footer>
+    <!--FIN SECCION FOOTER-->
 </body>
 
 </html>
