--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
         <!--FIN SECCION CARRUSEL-->
 
         <!--INICIO SECCION QUIENES SOMOS-->
-        <section class="d-none d-lg-block container-fluid text-center">
+        <section class="container text-center">
             <h3 class="my-4">¿Quienes somos?</h3>
             <hr>
             <div class="row">
-                <div class="col-6">
-                    <img src="./assets/img/quienes-somos.jpg" width="400px" alt="personas">
+                <div class="col-6 d-none d-lg-block">
+                    <img src="./assets/img/quienes-somos.jpg" class="img-fluid">
                 </div>
                 <div class="col-6">
                     <p class="text-start">
@@ -234,7 +234,7 @@
         </section>
         <!--FIN SECCION DESTACADOS-->
         <!--INICIO SECCION TESTIMONIOS-->
-        <section id="testimonios" class="my-4 container">
+        <section id="testimonios" class="testimonio my-4 container">
             <h2 class="mb-4 text-center">Testimonios</h2>
             <hr>
             <div class="row">
@@ -246,10 +246,10 @@
                             provident
                             culpa hic vitae, sunt eligendi rem</p>
                     </div>
-                    <div class="testimonio__img">
+                    <div class="testimonio__imagen">
                         <img src="./assets/img/testimonio1.jpg" alt="">
                     </div>
-                    <strong>Mariela</strong>
+                    <strong class="testimonio__nombres">Mariela</strong>
                 </div>
                 <!--Testimonio 2-->
                 <div class="col-12 col-lg-4">
@@ -259,10 +259,10 @@
                             provident
                             culpa hic vitae, sunt eligendi rem</p>
                     </div>
-                    <div class="testimonio__img">
+                    <div class="testimonio__imagen">
                         <img src="./assets/img/testimonio2.jpg" alt="">
                     </div>
-                    <strong>Christian</strong>
+                    <strong class="testimonio__nombres">Christian</strong>
                 </div>
                 <!--Testimonio 3-->
                 <div class="col-12 col-lg-4">
@@ -272,10 +272,10 @@
                             provident
                             culpa hic vitae, sunt eligendi rem</p>
                     </div>
-                    <div class="testimonio__img">
+                    <div class="testimonio__imagen">
                         <img src="./assets/img/testimonio3.jpg" alt="">
                     </div>
-                    <strong>Fernanda</strong>
+                    <strong class="testimonio__nombres">Fernanda</strong>
                 </div>
                 <!--fin Testimonios-->
             </div>
