--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script defer src="./assets/js/script.js"></script>
     <!--CSS PROPIO-->
     <link rel="stylesheet" href="./assets/css/main.css">
+
+    <script defer src="./assets/vendors/bootstrap.bundle.js"></script>
 </head>
 
 <body>
