--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script defer src="./assets/js/script.js"></script>
     <!--CSS PROPIO-->
     <link rel="stylesheet" href="./assets/css/main.css">
-
+    <!--Bundle bootstrap-->
     <script defer src="./assets/vendors/bootstrap.bundle.js"></script>
 </head>
 
