--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script defer src="./assets/js/script.js"></script>
     <!--CSS PROPIO-->
     <link rel="stylesheet" href="./assets/css/main.css">
+
     <!--Bundle bootstrap-->
     <script defer src="./assets/vendors/bootstrap.bundle.js"></script>
 </head>
@@ -78,7 +79,7 @@
                     <img src="./assets/img/carousel1.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/carousel2.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                    <img src="./assets/img/carousel2.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/img/carousel3.jpg" class="d-block w-100 object-fit-cover" alt="...">
