--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <img src="./assets/img/carousel1.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/carousel2.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                    <img src="./assets/img/carousel2.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/img/carousel3.jpg" class="d-block w-100 object-fit-cover" alt="...">
